--- a/src/index.html
+++ b/src/index.html
@@ -36,4 +36,43 @@ title: Desire
         </ul>
     </div>
 
+    <div class="promotion__timer">
+        <div class="promotion__timer-title">Осталось до конца акции:</div>
+        <div class="timer">
+            <div class="timer__block">
+                <span id="days">12</span>
+                дней
+            </div>
+            <div class="timer__block">
+                <span id="hours">20</span>
+                часов
+            </div>
+            <div class="timer__block">
+                <span id="minutes">56</span>
+                минут
+            </div>
+            <div class="timer__block">
+                <span id="seconds">20</span>
+                секунд
+            </div>
+        </div>
+        <!-- <div class="timer1">
+            <div class="timer__block">
+                <span id="days">12</span>
+                дней
+            </div>
+            <div class="timer__block">
+                <span id="hours">20</span>
+                часов
+            </div>
+            <div class="timer__block">
+                <span id="minutes">56</span>
+                минут
+            </div>
+            <div class="timer__block">
+                <span id="seconds">20</span>
+                секунд
+            </div>
+        </div> -->
+    </div>
 </div>
