Added a modal window

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@ title: Desire
                 <p>Наши Фрукты лучшие на свете</p>
             </li>
             <li class="tabscontent__item">
-                <img class="tabscontent__img" src="https://lh3.googleusercontent.com/proxy/yQPAJNIFg_ZNofD4andz5tc-i5bkwT_r7XPnMY2GnonrgxF46aDc8GGaauq_h0hLH73G6fFIBV6Ht5OvPO-S64TSVnte752SFpg9_86jN3Cx" alt="">
+                <img class="tabscontent__img" src="https://worldclassmag.com/files/nodus_items/0005/2716/_cache/fit988x988-image-2716-1611310336.jpg" alt="">
                 <p>Наше Мясо лучшее на свете</p>
             </li>
             <li class="tabscontent__item">
@@ -56,23 +56,23 @@ title: Desire
                 секунд
             </div>
         </div>
-        <!-- <div class="timer1">
-            <div class="timer__block">
-                <span id="days">12</span>
-                дней
+    </div>
+
+    <div class="btn__wrapper">
+        <button data-modal class="btn">Связатся с нами</button>
+    </div>
+
+    <div class="modal">
+        <div class="modal__dialog">
+            <div class="modal__content">
+                <form action="#">
+                    <div class="modal__close" data-close>&times;</div>
+                    <div class="modal__title">Мы свяжемся с вами как можно быстрее!</div>
+                    <input required placeholder="Ваше имя" name="name" type="text" class="modal__input">
+                    <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal__input">
+                    <button  class="btn">Перезвонить мне</button>
+                </form>
             </div>
-            <div class="timer__block">
-                <span id="hours">20</span>
-                часов
-            </div>
-            <div class="timer__block">
-                <span id="minutes">56</span>
-                минут
-            </div>
-            <div class="timer__block">
-                <span id="seconds">20</span>
-                секунд
-            </div>
-        </div> -->
+        </div>
     </div>
 </div>
